--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,12 +12,11 @@ crate-type = ["rlib", "staticlib", "cdylib"]
 [dependencies]
 libc = "0.2.58" # same with filecoin-project/filecoin-ffi
 storage-proofs = "4.0.1"
+serde = "1.0.115"
 serde_json = "1.0.57"
 rand = "0.7.3"
 chrono = "0.4.13"
 memmap = "0.7.0"
-tempdir = "0.3.7"
-anyhow = "1.0.32"
 merkletree = "0.21.0"
 
 [build-dependencies]
