--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,6 +18,8 @@ rand = "0.7.3"
 chrono = "0.4.13"
 memmap = "0.7.0"
 merkletree = "0.21.0"
+thiserror = "1.0.20"
+anyhow = "1.0.32"
 
 [build-dependencies]
 cbindgen = "0.14.3"
