--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,15 +11,21 @@ crate-type = ["rlib", "staticlib", "cdylib"]
 
 [dependencies]
 libc = "0.2.58" # same with filecoin-project/filecoin-ffi
-storage-proofs = "4.0.1"
 serde = "1.0.115"
 serde_json = "1.0.57"
 rand = "0.7.3"
 chrono = "0.4.13"
 memmap = "0.7.0"
-merkletree = "0.21.0"
+merkletree = "0.20.0"
 thiserror = "1.0.20"
 anyhow = "1.0.32"
+fil-sapling-crypto = "=0.6.0"
+paired = "=0.19.1"
+bellperson = "0.8.0"
+storage-proofs = "=4.0.1"
+storage-proofs-core = "=4.0.1"
+storage-proofs-porep = "=4.0.1"
+storage-proofs-post = "=4.0.1"
 
 [build-dependencies]
 cbindgen = "0.14.3"
