Add filecoin cached parameters fetching script.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/ffi"]
 	path = extern/ffi
 	url = https://github.com/filecoin-project/filecoin-ffi.git
+[submodule "extern/paramfetch"]
+	path = extern/paramfetch
+	url = https://github.com/filecoin-project/go-paramfetch.git
